# addon-nodejs

./: README.md  build.sh  clean.sh  test.js
native/: .gitignore  CMakeLists.txt
native/cpp/src/: interface.h  plugin.cpp
native/cpp/test/: test.cpp
nodejs/: binding.gyp  plugin.cpp
